# shreder-rust-example

./: .gitignore  Cargo.toml  Readme.md  build.rs  documentation.md
proto/: shredstream.proto
src/: main.rs
src/examples/entries/: Readme.md  main.rs
src/examples/transactions/: Readme.md  main.rs
