[package]
name = "shreder-client-example"
version = "0.1.0"
edition = "2025"

[dependencies]
bincode = "1.3.3"
solana-entry = "=2.2.1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
prost = "0.12"
prost-types = "0.12"
protobuf-src = "1"

[build-dependencies]
protobuf-src = "1"
tonic-build = "0.10"
